[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/gui/hud.gd" type="Script" id=1]
[ext_resource path="res://scenes/gui/combat.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/gui_themes/main.tres" type="Theme" id=3]
[ext_resource path="res://scenes/gui/message.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/gui/unit_stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/m5x7.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scripts/gui/popuppanel.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]

font/size = 32
extra_spacing/top = -3
extra_spacing/bottom = -1
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 6 )

[node name="HUD" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="Combat" parent="." instance=ExtResource( 2 )]

visibility/visible = false
theme/theme = ExtResource( 3 )

[node name="Message" parent="." instance=ExtResource( 4 )]

visibility/visible = false
theme/theme = ExtResource( 3 )

[node name="UnitStats" parent="." instance=ExtResource( 5 )]

theme/theme = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]

editor/display_folded = true
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 0.0
margin/top = 72.0
margin/right = 0.0
margin/bottom = 0.0

[node name="EndTurnButton" type="Button" parent="Panel"]

anchor/left = 1
anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 88.0
margin/top = 12.0
margin/right = 24.0
margin/bottom = -12.0
disabled = true
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "End Turn"
flat = false

[node name="MenuButton" type="Button" parent="Panel"]

anchor/top = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 24.0
margin/top = 12.0
margin/right = 88.0
margin/bottom = -12.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Menu"
flat = false

[node name="Message" type="Label" parent="Panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PopupPanel" type="PopupPanel" parent="."]

process/pause_mode = 2
editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 281.0
margin/top = 140.0
margin/right = 586.0
margin/bottom = 334.0
popup/exclusive = true
script/script = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 12.0
margin/top = 12.0
margin/right = 12.0
margin/bottom = 12.0
custom_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 20.0
margin/right = 281.0
margin/bottom = 29.0
text = "Pause Menu"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ResumeButton" type="Button" parent="PopupPanel/VBoxContainer"]

rect/min_size = Vector2( 128, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 2
margin/left = 76.0
margin/top = 45.0
margin/right = 204.0
margin/bottom = 69.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Resume"
flat = false

[node name="RestartButton" type="Button" parent="PopupPanel/VBoxContainer"]

rect/min_size = Vector2( 128, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 2
margin/left = 76.0
margin/top = 85.0
margin/right = 204.0
margin/bottom = 109.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Restart"
flat = false

[node name="QuitButton" type="Button" parent="PopupPanel/VBoxContainer"]

rect/min_size = Vector2( 128, 24 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 2
margin/left = 76.0
margin/top = 125.0
margin/right = 204.0
margin/bottom = 149.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Main Menu"
flat = false

[connection signal="pressed" from="Panel/EndTurnButton" to="." method="_on_EndTurnButton_pressed"]

[connection signal="pressed" from="Panel/MenuButton" to="." method="_on_MenuButton_pressed"]

[connection signal="about_to_show" from="PopupPanel" to="PopupPanel" method="_on_about_to_show"]

[connection signal="popup_hide" from="PopupPanel" to="PopupPanel" method="_on_popup_hide"]

[connection signal="pressed" from="PopupPanel/VBoxContainer/ResumeButton" to="PopupPanel" method="_on_ResumeButton_pressed"]

[connection signal="pressed" from="PopupPanel/VBoxContainer/RestartButton" to="PopupPanel" method="_on_RestartButton_pressed"]

[connection signal="pressed" from="PopupPanel/VBoxContainer/QuitButton" to="PopupPanel" method="_on_QuitButton_pressed"]


